--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <section class="block-b">
             <div class="block-b__video">
                 <video preload="auto" muted playsinline>
-                    <source src="/video/block-b.mp4" type="video/mp4">
+                    <source src="video/block-b.mp4" type="video/mp4">
                     </source>
                 </video>
             </div>
@@ -324,7 +324,7 @@
                         <div class="block-slider__block-slider-desc block-slider-desc">
                             <div class="block-slider-desc__text">
                                 <div class="block-slider-desc__paging"><span>01</span>
-                                    <img src="/img/Line.svg">&nbsp;&nbsp;05
+                                    <img src="img/Line.svg">&nbsp;&nbsp;05
                                 </div>
                                 <div class="block-slider-desc__title">Трактора КИРОВЕЦ</div>
                                 <div class="block-slider-desc__subtitle">Мощность двигателя 420 л.с. идеально подходит
@@ -334,16 +334,16 @@
                             </div>
                             <div class="block-slider-desc__arrow">
                                 <div class="block-slider-desc__arrow-left">
-                                    <img src="/img/arrow-left.svg" alt="стрелка-влево">
+                                    <img src="img/arrow-left.svg" alt="стрелка-влево">
                                 </div>
                                 <div class="block-slider-desc__arrow-right">
-                                    <img src="/img/arrow-right.svg" alt="стрелка-вправо">
+                                    <img src="img/arrow-right.svg" alt="стрелка-вправо">
                                 </div>
                             </div>
                         </div>
                         <div class="block-slider__block-slider-pic block-slider-pic">
                             <div class="block-slider-pic__1">
-                                <img src="/img/slider1.webp" alt="слайдер-1">
+                                <img src="img/slider1.webp" alt="слайдер-1">
                             </div>
                         </div>
                     </div>
@@ -361,42 +361,42 @@
                     <div class="block-partners__block-partners-list block-partners-list">
                         <div class="block-partners__block-partners-item block-partners-item">
                             <a href="#" class="block-partners__block-partners-logo block-partners-logo">
-                                <img src="/img/parther1.svg" alt="партнер-1">
+                                <img src="img/parther1.svg" alt="партнер-1">
                             </a>
                         </div>
                         <div class="block-partners__block-partners-item block-partners-item">
                             <a href="#" class="block-partners__block-partners-logo block-partners-logo">
-                                <img src="/img/parther2.svg" alt="партнер-2">
+                                <img src="img/parther2.svg" alt="партнер-2">
                             </a>
                         </div>
                         <div class="block-partners__block-partners-item block-partners-item">
                             <a href="#" class="block-partners__block-partners-logo block-partners-logo">
-                                <img src="/img/parther3.svg" alt="партнер-3">
+                                <img src="img/parther3.svg" alt="партнер-3">
                             </a>
                         </div>
                         <div class="block-partners__block-partners-item block-partners-item">
                             <a href="#" class="block-partners__block-partners-logo block-partners-logo">
-                                <img src="/img/parther4.svg" alt="партнер-4">
+                                <img src="img/parther4.svg" alt="партнер-4">
                             </a>
                         </div>
                         <div class="block-partners__block-partners-item block-partners-item">
                             <a href="#" class="block-partners__block-partners-logo block-partners-logo">
-                                <img src="/img/parther5.svg" alt="партнер-5">
+                                <img src="img/parther5.svg" alt="партнер-5">
                             </a>
                         </div>
                         <div class="block-partners__block-partners-item block-partners-item">
                             <a href="#" class="block-partners__block-partners-logo block-partners-logo">
-                                <img src="/img/parther6.svg" alt="партнер-6">
+                                <img src="img/parther6.svg" alt="партнер-6">
                             </a>
                         </div>
                         <div class="block-partners__block-partners-item block-partners-item">
                             <a href="#" class="block-partners__block-partners-logo block-partners-logo">
-                                <img src="/img/parther7.svg" alt="партнер-7">
+                                <img src="img/parther7.svg" alt="партнер-7">
                             </a>
                         </div>
                         <div class="block-partners__block-partners-item block-partners-item">
                             <a href="#" class="block-partners__block-partners-logo block-partners-logo">
-                                <img src="/img/parther8.svg" alt="партнер-8">
+                                <img src="img/parther8.svg" alt="партнер-8">
                             </a>
                         </div>
                     </div>
@@ -420,7 +420,7 @@
                         </div>
                     </div>
                     <div class="block-pros-pic">
-                        <img src="/img/block-pros-pic.png">
+                        <img src="img/block-pros-pic.png">
                     </div>
                 </div>
             </div>
@@ -437,7 +437,7 @@
                             <div class="block-news-main__block-news-main-list block-news-main-list">
                                 <div class="block-news-main-list__inner">
                                     <a href="#" class="block-news-main-list__pic">
-                                        <img src="/img/block-news-pic-1.png" alt="картинка-1">
+                                        <img src="img/block-news-pic-1.png" alt="картинка-1">
                                     </a>
                                     <div class="block-news-main-list__info">
                                         <a href="#" class="block-news-main-list__title">Нижегородская выставка
@@ -466,7 +466,7 @@
                             <div class="block-news-main__block-news-main-list block-news-main-list">
                                 <div class="block-news-main-list__inner">
                                     <a href="#" class="block-news-main-list__pic">
-                                        <img src="/img/block-news-pic-2.png" alt="картинка-2">
+                                        <img src="img/block-news-pic-2.png" alt="картинка-2">
                                     </a>
                                     <div class="block-news-main-list__info">
                                         <a href="#" class="block-news-main-list__title">Второй всероссийский съезд
@@ -495,7 +495,7 @@
                             <div class="block-news-main__block-news-main-list block-news-main-list">
                                 <div class="block-news-main-list__inner">
                                     <a href="#" class="block-news-main-list__pic">
-                                        <img src="/img/block-news-pic-3.png" alt="картинка-3">
+                                        <img src="img/block-news-pic-3.png" alt="картинка-3">
                                     </a>
                                     <div class="block-news-main-list__info">
                                         <a href="#" class="block-news-main-list__title">В России собрано рекордное
