--- a/index.html
+++ b/index.html
@@ -90,12 +90,10 @@
         </div>
     </header>
     <main>
-        <section class="block-b">
-            <div class="block-b__video">
-                <video preload="auto" muted playsinline>
-                    <source src="video/block-b.mp4" type="video/mp4">
-                    </source>
-                </video>
+<section class="block-b">
+<div class="block-b__video">
+<video src="video/block-b.mp4" preload="auto" muted playsinline">
+</video>
             </div>
             <div class="container block-b__container">
                 <div class="block-b__wrap">
