--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@
         </div>
     </header>
     <main>
-<section class="block-b">
-<div class="block-b__video">
-<video src="video/block-b.mp4" preload="auto" muted playsinline">
-</video>
-            </div>
+    <section class="block-b">
+        <div class="block-b__video">
+           <video src="video/video-main.mp4" preload="auto" muted playsinline">
+           </video>
+         </div>
             <div class="container block-b__container">
                 <div class="block-b__wrap">
                     <div class="block-b__inner">
