--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <main>
     <section class="block-b">
         <div class="block-b__video">
-           <video src="video/video-main.mp4" preload="auto" muted playsinline">
+           <video src="video/video-main.mp4" autoplay muted loop">
            </video>
          </div>
             <div class="container block-b__container">
